[package]
name = "kubos-system"
version = "0.1.0"
authors = ["Marshall Culpepper <marshall@kubos.com>"]
edition = "2018"

[dependencies]
failure = "0.1.2"
# cubeos-error = { git = "ssh://git@github.com/Cube-OS/cubeos-error"}
cubeos-error = { path = "../cubeos-error"}
# log4rs = "0.8.3"
# log4rs-syslog = "3.0"
syslog = "^6.0.1"
log = "^0.4.8"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"

[dev-dependencies]
tempfile = "3"
